<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NativeGraphics</string>
    <string name="main_activity_title">MainActivity</string>
    <string name="file_name_hint">AVI Video File Name</string>
    <string name="file_name_text">galleon.avi</string>
    <string name="play_button">Play</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="error_alert_title">Error Occurred</string>
    <string name="bitmap_player_radio">Bitmap Player</string>
    <string name="title_activity_bitmap_player">Bitmap Player</string>
    <string name="title_activity_open_gl_player">OpenGL Player</string>
    <string name="open_gl_player_radio">OpenGL Player</string>
</resources>
