<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/file_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/file_name_hint"
        android:text="@string/file_name_text">

        <requestFocus />
    </EditText>

    <RadioGroup
        android:id="@+id/player_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/bitmap_player_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/bitmap_player_radio" />

        <RadioButton
            android:id="@+id/opengl_player_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/open_gl_player_radio" />

        <RadioButton
            android:id="@+id/native_window_player_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/native_window_player_radio" />
    </RadioGroup>

    <Button
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_button" />
</LinearLayout>